# django-flatpickr

./: .coveralls.yml  .env.defaults  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  package.json  pyproject.toml  setup.py
.devcontainer/: Dockerfile  Makefile  devcontainer.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md
.github/workflows/: build.yml
dev/: pyproject.toml  requirements.txt
dev/demo_generator/: __init__.py  build.js
dev/meta_redirect/: views.py
dev/meta_redirect/templates/meta_redirect/: index.html
dev/myapp/: forms.py  models.py  urls.py  views.py
dev/myapp/migrations/: 0001_initial.py  0002_insert_demo_event.py
dev/myapp/templates/layouts/: main.html  nav-bar.html
dev/myapp/templates/myapp/: crispy-form.html  custom-flatpickr-input.html  custom-form.html  custom-formset.html  event_filter.html  event_form.html
dev/mysite/: context_processors.py  settings.py  urls.py
docs/: index.html
docs/demo/: custom-form.html  generic-view-with-model-form-1.html  generic-view.html  index.html
flatpickr/: _media.py
src/django_flatpickr/: __init__.py  _base.py  _config.py  _media.py  schemas.py  settings.py  widgets.py
src/django_flatpickr/static/django_flatpickr/js/: django-flatpickr.js
src/django_flatpickr/templates/django_flatpickr/: input.html
static/js/: django-flatpickr.js
tests/: conftest.py  pip-constraints.txt  settings.py  test_config.py  test_context_render.py  test_demo.py  test_flatpickr_options.py  test_helpers.py  test_input_attrs.py  test_linked_inputs.py  test_media.py  test_utils.py
